# databricks-rust-app

./: .env.example  .gitignore  Cargo.toml  README.md  app.yaml  databricks.yml  main.py
migrations/: 0001_create_users.sql
src/: main.rs
